--- a/package.json
+++ b/package.json
@@ -9,18 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14"
+    "@babel/core": "^7.25.7",
+    "@codesandbox/sandpack-react": "^2.19.9",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
+    "@mui/material-nextjs": "^6.1.2",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.114.2",
+    "@react-three/fiber": "^8.17.9",
+    "babel-plugin-glsl": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "colorthief": "^2.4.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.11.1",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.447.0",
+    "mapbox-gl": "^3.7.0",
+    "next": "14.2.14",
+    "next-optimized-images": "^2.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
+    "react-parallax": "^3.5.1",
+    "react-particles": "^2.12.2",
+    "react-toastify": "^10.0.5",
+    "react-typist": "^2.0.5",
+    "tailwind-merge": "^2.5.3",
+    "three": "^0.169.0",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@babel/preset-typescript": "^7.25.7",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "^5.6.2"
   }
 }
