--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-parallax": "^3.5.1",
     "react-particles": "^2.12.2",
     "react-toastify": "^10.0.5",
-    "react-typist": "^2.0.5",
+    "react-text-loop": "^2.0.0", 
     "tailwind-merge": "^2.5.3",
     "three": "^0.169.0",
     "tsparticles": "^3.5.0"
