--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-parallax": "^3.5.1",
     "react-particles": "^2.12.2",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.3",
     "three": "^0.169.0",
     "tsparticles": "^3.5.0"
@@ -45,7 +46,9 @@
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
