--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-glsl": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "colorthief": "^2.4.0",
@@ -50,8 +51,8 @@
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2"
   }
 }
