--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "@eslint/config-array": "^latest",  
-  "@eslint/object-schema": "^latest",  
-  "@tsparticles/react": "^latest",
-  "@emailjs/browser": "^latest",
+    "@eslint/config-array": "^ 0.19.2",
+    "@eslint/object-schema": "^2.1.6",
+    "@tsparticles/react": "^3.0.0",
+    "@emailjs/browser": "^4.4.1",
     "@babel/core": "^7.25.7",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@emotion/react": "^11.13.3",
